# flatbuffers needs src/
src_incdir = include_directories('.')

subdir('third-party')

all_deps = [zlib_dep, gui_dep, flatbuffers_dep]

sources = '''
    achievement.cpp
    action.cpp
    active_item_cache.cpp
    activity_actor.cpp
    activity_handlers.cpp
    activity_item_handling.cpp
    activity_tracker.cpp
    activity_type.cpp
    addiction.cpp
    advanced_inv.cpp
    advanced_inv_area.cpp
    advanced_inv_listitem.cpp
    advanced_inv_pagination.cpp
    advanced_inv_pane.cpp
    ammo.cpp
    ammo_effect.cpp
    anatomy.cpp
    animation.cpp
    armor_layers.cpp
    ascii_art.cpp
    assign.cpp
    auto_note.cpp
    auto_pickup.cpp
    avatar.cpp
    avatar_action.cpp
    ballistics.cpp
    basecamp.cpp
    behavior.cpp
    behavior_oracle.cpp
    behavior_strategy.cpp
    bionics.cpp
    bionics_ui.cpp
    bodygraph.cpp
    bodypart.cpp
    bonuses.cpp
    butchery_requirements.cpp
    cached_options.cpp
    calendar.cpp
    calendar_ui.cpp
    cata_bitset.cpp
    cata_imgui.cpp
    cata_tiles.cpp
    cata_utility.cpp
    cata_variant.cpp
    catacharset.cpp
    cellular_automata.cpp
    char_validity_check.cpp
    character.cpp
    character_ammo.cpp
    character_armor.cpp
    character_attire.cpp
    character_body.cpp
    character_crafting.cpp
    character_escape.cpp
    character_guns.cpp
    character_id.cpp
    character_inventory.cpp
    character_martial_arts.cpp
    character_modifier.cpp
    character_morale.cpp
    character_oracle.cpp
    character_proficiency.cpp
    city.cpp
    climbing.cpp
    clothing_mod.cpp
    clzones.cpp
    color.cpp
    compatibility.cpp
    computer.cpp
    computer_session.cpp
    condition.cpp
    construction.cpp
    construction_category.cpp
    construction_group.cpp
    consumption.cpp
    contents_change_handler.cpp
    coordinate_conversions.cpp
    coordinates.cpp
    craft_command.cpp
    crafting.cpp
    crafting_gui.cpp
    crash.cpp
    creature.cpp
    creature_tracker.cpp
    cursesport.cpp
    damage.cpp
    debug.cpp
    debug_menu.cpp
    demangle.cpp
    dependency_tree.cpp
    descriptions.cpp
    dialogue_chatbin.cpp
    dialogue_helpers.cpp
    dialogue_win.cpp
    diary.cpp
    diary_ui.cpp
    disease.cpp
    dispersion.cpp
    display.cpp
    distraction_manager.cpp
    distribution.cpp
    do_turn.cpp
    drawing_primitives.cpp
    editmap.cpp
    effect.cpp
    effect_on_condition.cpp
    effect_source.cpp
    emit.cpp
    emscripten_exception.cpp
    event.cpp
    event_bus.cpp
    event_field_transformations.cpp
    event_statistics.cpp
    explosion.cpp
    faction.cpp
    faction_camp.cpp
    fault.cpp
    field.cpp
    field_type.cpp
    filesystem.cpp
    filesystem_impl.cpp
    flag.cpp
    flexbuffer_cache.cpp
    flexbuffer_json.cpp
    font_loader.cpp
    fungal_effects.cpp
    game.cpp
    game_inventory.cpp
    game_ui.cpp
    gamemode.cpp
    gamemode_tutorial.cpp
    gates.cpp
    generic_factory.cpp
    grab.cpp
    handle_action.cpp
    handle_liquid.cpp
    harvest.cpp
    help.cpp
    iexamine.cpp
    iexamine_actors.cpp
    init.cpp
    input.cpp
    input_context.cpp
    inventory.cpp
    inventory_ui.cpp
    item.cpp
    item_action.cpp
    item_category.cpp
    item_components.cpp
    item_contents.cpp
    item_factory.cpp
    item_group.cpp
    item_location.cpp
    item_pocket.cpp
    item_search.cpp
    item_stack.cpp
    item_tname.cpp
    iteminfo_query.cpp
    itype.cpp
    iuse.cpp
    iuse_actor.cpp
    iuse_software.cpp
    iuse_software_kitten.cpp
    iuse_software_lightson.cpp
    iuse_software_minesweeper.cpp
    iuse_software_snake.cpp
    iuse_software_sokoban.cpp
    json.cpp
    json_loader.cpp
    kill_tracker.cpp
    lang_stats.cpp
    level_cache.cpp
    lightmap.cpp
    line.cpp
    live_view.cpp
    loading_ui.cpp
    localized_comparator.cpp
    magic.cpp
    magic_enchantment.cpp
    magic_spell_effect.cpp
    magic_teleporter_list.cpp
    magic_ter_fur_transform.cpp
    main.cpp
    main_menu.cpp
    map.cpp
    map_extras.cpp
    map_field.cpp
    map_item_stack.cpp
    map_memory.cpp
    map_selector.cpp
    mapbuffer.cpp
    mapdata.cpp
    mapgen.cpp
    mapgen_functions.cpp
    mapgendata.cpp
    mapgenformat.cpp
    mapsharing.cpp
    martialarts.cpp
    material.cpp
    math_parser.cpp
    math_parser_diag.cpp
    math_parser_diag_value.cpp
    math_parser_func.cpp
    math_parser_jmath.cpp
    mattack_actors.cpp
    medical_ui.cpp
    melee.cpp
    memorial_logger.cpp
    messages.cpp
    mission.cpp
    mission_companion.cpp
    mission_place.cpp
    mission_start.cpp
    mission_ui.cpp
    mission_util.cpp
    missiondef.cpp
    mmap_file.cpp
    mod_manager.cpp
    mod_manager_ui.cpp
    mod_tileset.cpp
    monattack.cpp
    mondeath.cpp
    mondefense.cpp
    monexamine.cpp
    monfaction.cpp
    mongroup.cpp
    monmove.cpp
    monster.cpp
    monster_oracle.cpp
    monstergenerator.cpp
    mood_face.cpp
    morale.cpp
    morale_types.cpp
    move_mode.cpp
    mtype.cpp
    music.cpp
    mutation.cpp
    mutation_data.cpp
    mutation_type.cpp
    mutation_ui.cpp
    ncurses_def.cpp
    newcharacter.cpp
    npc.cpp
    npc_attack.cpp
    npc_class.cpp
    npcmove.cpp
    npctalk.cpp
    npctalk_funcs.cpp
    npctrade.cpp
    npctrade_utils.cpp
    options.cpp
    ordered_static_globals.cpp
    output.cpp
    overlay_ordering.cpp
    overmap.cpp
    overmap_connection.cpp
    overmap_location.cpp
    overmap_noise.cpp
    overmap_ui.cpp
    overmapbuffer.cpp
    panels.cpp
    past_achievements_info.cpp
    past_games_info.cpp
    path_info.cpp
    pathfinding.cpp
    pickup.cpp
    pinyin.cpp
    pixel_minimap.cpp
    pixel_minimap_projectors.cpp
    player_activity.cpp
    player_difficulty.cpp
    player_display.cpp
    player_hardcoded_effects.cpp
    point.cpp
    popup.cpp
    profession.cpp
    profession_group.cpp
    proficiency.cpp
    proficiency_ui.cpp
    projectile.cpp
    ranged.cpp
    recipe.cpp
    recipe_dictionary.cpp
    recipe_groups.cpp
    regional_settings.cpp
    relic.cpp
    requirements.cpp
    rng.cpp
    rotatable_symbols.cpp
    safe_reference.cpp
    safemode_ui.cpp
    savegame.cpp
    savegame_json.cpp
    savegame_legacy.cpp
    scenario.cpp
    scent_block.cpp
    scent_map.cpp
    scores_ui.cpp
    sdl_font.cpp
    sdl_gamepad.cpp
    sdl_geometry.cpp
    sdl_utils.cpp
    sdl_wrappers.cpp
    sdlsound.cpp
    sdltiles.cpp
    shadowcasting.cpp
    shearing.cpp
    shop_cons_rate.cpp
    simple_pathfinding.cpp
    simplexnoise.cpp
    skill.cpp
    skill_boost.cpp
    skill_ui.cpp
    smart_controller_ui.cpp
    sounds.cpp
    speech.cpp
    speed_description.cpp
    start_location.cpp
    stats_tracker.cpp
    stomach.cpp
    string_editor_window.cpp
    string_formatter.cpp
    string_id.cpp
    string_id_null_ids.cpp
    string_input_popup.cpp
    subbodypart.cpp
    submap.cpp
    suffer.cpp
    system_locale.cpp
    talker_avatar.cpp
    talker_character.cpp
    talker_furniture.cpp
    talker_item.cpp
    talker_monster.cpp
    talker_npc.cpp
    talker_topic.cpp
    teleport.cpp
    temp_crafting_inventory.cpp
    test_data.cpp
    text_snippets.cpp
    text_style_check_reader.cpp
    tgz_archiver.cpp
    tileray.cpp
    timed_event.cpp
    trade_ui.cpp
    trait_group.cpp
    translation.cpp
    translation_document.cpp
    translation_gendered.cpp
    translation_manager.cpp
    translation_manager_impl.cpp
    translation_plural_evaluator.cpp
    translations.cpp
    trap.cpp
    trapfunc.cpp
    try_parse_integer.cpp
    turret.cpp
    ui.cpp
    ui_manager.cpp
    unicode.cpp
    units.cpp
    units_utility.cpp
    veh_appliance.cpp
    veh_interact.cpp
    veh_shape.cpp
    veh_type.cpp
    veh_utils.cpp
    vehicle.cpp
    vehicle_autodrive.cpp
    vehicle_display.cpp
    vehicle_group.cpp
    vehicle_move.cpp
    vehicle_part.cpp
    vehicle_selector.cpp
    vehicle_use.cpp
    version.cpp
    visitable.cpp
    vitamin.cpp
    wcwidth.cpp
    weakpoint.cpp
    weather.cpp
    weather_gen.cpp
    weather_type.cpp
    widget.cpp
    wincurse.cpp
    wish.cpp
    worldfactory.cpp
'''.split()

sources += vcs_tag(fallback: '0.I', input: 'version.h.in', output: 'version.h')

cpp_options = '''
  -Werror -Wall -Wextra
  -Wformat-signedness
  -Wlogical-op
  -Wmissing-declarations
  -Wmissing-noreturn
  -Wnon-virtual-dtor
  -Woverloaded-virtual
  -Wpedantic
  -Wsuggest-override
  -Wunused-macros
  -Wzero-as-null-pointer-constant
  -Wno-unknown-warning-option
  -Wno-dangling-reference
  -Wno-c++20-compat
  -fsigned-char
'''.split()

cpp_options = cxx.get_supported_arguments(cpp_options)

src_lib = static_library('cataclysm', sources, cpp_args: cpp_options, dependencies: all_deps, cpp_pch: src_pch)
src_dep = declare_dependency(link_with: src_lib, include_directories: src_incdir, dependencies: all_deps)

executable('cataclysm', 'main.cpp', cpp_args: cpp_options, include_directories: [thirdparty_incdir], dependencies: [src_dep, all_deps], win_subsystem: 'windows')

