test_sources = '''
    act_build_test.cpp
    active_item_cache_test.cpp
    active_item_test.cpp
    activity_scheduling_helper.cpp
    activity_tracker_test.cpp
    addiction_test.cpp
    algo_test.cpp
    ammo_set_test.cpp
    ammo_test.cpp
    archery_damage_test.cpp
    battery_mod_test.cpp
    behavior_test.cpp
    bionics_test.cpp
    calendar_test.cpp
    cardio_test.cpp
    cartesian_product_test.cpp
    catacharset_test.cpp
    cata_generators.cpp
    cata_utility_test.cpp
    cata_variant_test.cpp
    character_modifier_test.cpp
    char_biometrics_test.cpp
    char_edible_rating_test.cpp
    char_exposure_test.cpp
    char_healing_test.cpp
    char_sight_test.cpp
    char_stamina_test.cpp
    char_suffer_test.cpp
    char_validity_check_test.cpp
    clzones_test.cpp
    colony_test.cpp
    comestible_test.cpp
    connect_rotate_test.cpp
    consumption_time_test.cpp
    coordinate_test.cpp
    coverage_test.cpp
    crafting_test.cpp
    creature_effect_test.cpp
    creature_in_field_test.cpp
    creature_test.cpp
    cube_direction_test.cpp
    degradation_test.cpp
    distribution_test.cpp
    effective_dps_test.cpp
    effect_test.cpp
    enchantments_test.cpp
    encumbrance_test.cpp
    eoc_test.cpp
    event_test.cpp
    explosion_balance_test.cpp
    faction_camp_test.cpp
    faction_price_rules_test.cpp
    fake_messages.cpp
    field_test.cpp
    firstaid_test.cpp
    flat_set_test.cpp
    focus_test.cpp
    fold_string_test.cpp
    food_fun_for_test.cpp
    force_load_game_test.cpp
    fuel_test.cpp
    gates_test.cpp
    generic_factory_test.cpp
    ground_destroy_test.cpp
    harvest_test.cpp
    hash_test.cpp
    health_test.cpp
    iexamine_test.cpp
    invlet_test.cpp
    item_autopickup_test.cpp
    item_contents_test.cpp
    item_countdown_test.cpp
    item_group_test.cpp
    iteminfo_test.cpp
    item_location_test.cpp
    itemname_test.cpp
    item_pickup_test.cpp
    item_pocket_test.cpp
    item_spawn_test.cpp
    item_stackable_test.cpp
    item_test.cpp
    item_tick_action_test.cpp
    item_tname_test.cpp
    item_type_name_test.cpp
    iuse_actor_test.cpp
    iuse_test.cpp
    json_test.cpp
    limb_test.cpp
    line_test.cpp
    list_test.cpp
    magic_spell_effect_test.cpp
    magic_spell_test.cpp
    make_static_test.cpp
    map_bash_test.cpp
    map_extra_test.cpp
    mapgen_function_test.cpp
    mapgen_helpers.cpp
    mapgen_place_vehicles_test.cpp
    mapgen_remove_npcs_test.cpp
    mapgen_remove_vehicles_test.cpp
    map_helpers.cpp
    map_iterator_test.cpp
    map_memory_test.cpp
    map_test_case.cpp
    map_test_case_test.cpp
    map_test.cpp
    martial_art_test.cpp
    materials_test.cpp
    math_parser_test.cpp
    mdarray_test.cpp
    melee_dodge_hit_test.cpp
    melee_test.cpp
    memorial_test.cpp
    mission_test.cpp
    modify_morale_test.cpp
    mondefense_test.cpp
    monfactions_test.cpp
    mongroup_test.cpp
    monster_attack_test.cpp
    monster_helpers.cpp
    monster_test.cpp
    monster_vision_test.cpp
    moon_test.cpp
    morale_test.cpp
    move_cost_test.cpp
    mutation_test.cpp
    name_test.cpp
    nest_conditional_placement_test.cpp
    new_character_test.cpp
    normalized_test_names_test.cpp
    npc_attack_test.cpp
    npc_blacklist_test.cpp
    npc_shop_cons_rates_test.cpp
    npc_shopkeeper_item_groups_test.cpp
    npc_talk_test.cpp
    npc_test.cpp
    options_helpers.cpp
    options_test.cpp
    overmap_noise_test.cpp
    overmap_test.cpp
    player_activities_test.cpp
    player_helpers.cpp
    player_test.cpp
    point_test.cpp
    projectile_test.cpp
    ranged_balance_test.cpp
    reading_test.cpp
    recipe_test.cpp
    reloading_test.cpp
    reload_magazine_test.cpp
    reload_option_test.cpp
    reload_time_test.cpp
    requirements_test.cpp
    rewrite_vsnprintf_test.cpp
    rng_test.cpp
    rot_test.cpp
    safe_reference_test.cpp
    shadowcasting_test.cpp
    simple_pathfinding_test.cpp
    skill_test.cpp
    speed_description_test.cpp
    start_date_test.cpp
    stats_tracker_test.cpp
    stomach_contents_test.cpp
    string_formatter_test.cpp
    string_ids_test.cpp
    stringmaker.cpp
    string_test.cpp
    submap_load_test.cpp
    submap_test.cpp
    sun_test.cpp
    temp_crafting_inv_test.cpp
    temperature_test.cpp
    test_main.cpp
    test_statistics.cpp
    text_snippets_test.cpp
    throw_activation_test.cpp
    throwing_test.cpp
    tool_quality_test.cpp
    translations_test.cpp
    translation_system_test.cpp
    try_parse_integer_test.cpp
    uncraft_test.cpp
    units_test.cpp
    unload_naked_test.cpp
    unseal_and_spill_test.cpp
    value_ptr_test.cpp
    vehicle_drag_test.cpp
    vehicle_efficiency_test.cpp
    vehicle_export_test.cpp
    vehicle_fake_part_test.cpp
    vehicle_interact_test.cpp
    vehicle_part_test.cpp
    vehicle_power_test.cpp
    vehicle_ramp_test.cpp
    vehicle_split_test.cpp
    vehicle_test.cpp
    vehicle_turrets_test.cpp
    vision_test.cpp
    visitable_remove_test.cpp
    visitable_test.cpp
    visitable_zone_test.cpp
    water_movement_test.cpp
    weakpoint_test.cpp
    weary_test.cpp
    weather_test.cpp
    widget_test.cpp
    wield_times_test.cpp
    zones_custom_test.cpp
'''.split()

test_categories = '''
trade
vitamins
weapon
will_eat
zones
autopickup
behavior
bionics
damage
dodge
event
flat_set
generic_factory
health
material
moon
mutation
power
skill
targeting_graph
throwing
weakpoint
weight
coverage
degradation
item_group
magazine
random
tool
activities
book
calendar
creature
map
mongroup
player
temperature
utility
variant
ammo
biometrics
can_eat
cardio
catacharset
colony
enchantments
line
reading
requirement
coords
fun_for
modify_morale
mondefense
npc
overmap
stamina
tname
tripoint_range
vehicle_fake
melee
spell
units
activity
addiction
armor
stats
sun
edible_rating
iuse
mutations
balance
encumbrance
json
player_morale
limb
list
load
math_parser
field
gun
submap
reload
magic
point
crafting
character
effect
monster
shadowcasting
food
vision
pocket
widget
npc_talk
nogame
eoc
iteminfo
vehicle
item
'''.split()

if get_option('tests')
    cata_test_executable = executable('cata_test', test_sources, cpp_args: ['-DCATCH_CONFIG_ENABLE_BENCHMARKING'], dependencies: [src_dep])
    foreach t : test_categories
        test(t, cata_test_executable, args : ['['+t+']' + '~[slow]'], workdir: meson.source_root(), timeout: 300)
    endforeach
endif

